--- a/ipython_examples/Holmberg.ipynb
+++ b/ipython_examples/Holmberg.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Holberg\n",
+    "# Holmberg\n",
     "This notebook tries to recreate the N-body simulation of Erik Holmberg. In 1941 he used light bulbs to simulate the gravitational interaction of stars within two colliding galaxies. The paper can be found on [ADS](http://adsabs.harvard.edu/abs/1941ApJ....94..385H).\n",
     "\n",
     "Here, we use REBOUND instead of lightbulbs."
