ipython updates and simulation.py

--- a/ipython_examples/HERMES_OutwardMigration.ipynb
+++ b/ipython_examples/HERMES_OutwardMigration.ipynb
@@ -95,8 +95,9 @@
     "        current_t = timing.time()-start_t\n",
     "        a = get_a(sim,sim.N_active-1)\n",
     "        N_mini = 0\n",
-    "        #if(sim.integrator == \"hybarid\"):\n",
-    "        #    N_mini = sim.ri_hybarid.mini.N\n",
+    "        if(sim.integrator == \"hybarid\"):\n",
+    "            mini = sim.ri_hybarid.mini.contents\n",
+    "            N_mini = mini.N\n",
     "        too_large = sim.ri_hybarid.timestep_too_large_warning\n",
     "        writefile.write(','.join(map(str,(sim.t,dE,a,sim.N,N_mini,current_t,too_large))) +\"\\n\")\n",
     "    write_t = min(write_t*write_log,write_t*write_lin)\n",
@@ -160,22 +161,22 @@
    },
    "outputs": [],
    "source": [
-    "def get_filename(HSR,dt,run):\n",
-    "    return \"output/OutwardMigration_HSR%d_dt%.4f_%d.txt\"%(HSR,dt,run)"
+    "def get_filename(HSB,dt,run):\n",
+    "    return \"output/OutwardMigration_HSB%d_dt%.4f_%d.txt\"%(HSB,dt,run)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def problem(HSR, dt, seed, run, eia_active):\n",
+    "def problem(HSB, dt, seed, run, eia_active):\n",
     "    \n",
     "    #initialization stuff\n",
-    "    filename = get_filename(HSR,dt,run)\n",
+    "    filename = get_filename(HSB,dt,run)\n",
     "    try:\n",
     "        os.remove(filename)\n",
     "    except OSError:\n",
@@ -190,12 +191,12 @@
     "    \n",
     "    #integrator options\n",
     "    sim.integrator = \"hybarid\"\n",
-    "    sim.ri_hybarid.switch_radius = HSR\n",
+    "    sim.ri_hybarid.switch_radius = HSB\n",
     "    sim.ri_hybarid.CE_radius = 20.\n",
     "    sim.dt = dt\n",
     "    sim.testparticle_type = 1\n",
-    "    #tmax = 1e5*6.283\n",
-    "    tmax = 100*6.283\n",
+    "    tmax = 1e5*6.283\n",
+    "    #tmax = 100*6.283\n",
     "\n",
     "    #collision and boundary options\n",
     "    sim.collision = \"direct\"\n",
@@ -207,28 +208,30 @@
     "    \n",
     "    #central star + inner massive body\n",
     "    sim.add(m=1.,r=0.005) \n",
-    "    sim.add(m=5e-4,r=4.67e-4,a=0.6,e=0,inc=0.0001)\n",
+    "    #sim.add(m=5e-4,r=4.67e-4,a=0.6,e=0,inc=0.0001)\n",
+    "    sim.add(m=5e-4,r=4.67e-4,a=3,e=0,inc=0.0001)\n",
     "    \n",
     "    #migrating planet\n",
     "    m_earth = 0.000003003\n",
     "    m_planet = 2.3*m_earth\n",
-    "    a_planet = 1\n",
+    "    #a_planet = 1\n",
+    "    a_planet = 5\n",
     "    sim.add(m=m_planet,r=7.88e-5,a=a_planet,e=0,inc=-0.0001)\n",
     "    \n",
     "    sim.N_active = sim.N\n",
     "    \n",
     "    #planetesimal disk beginning at edge of planet's orbit\n",
     "    print \"Populating planetesimal disk for run %d\"%run\n",
-    "    m_pl = m_planet/600.\n",
-    "    #N_pl = 230*m_earth/m_pl\n",
-    "    N_pl = 50\n",
+    "    m_pl_tot = m_planet*10.\n",
+    "    N_pl = 20000\n",
+    "    m_pl = m_pl_tot / float(N_pl)\n",
     "    r_pl = 0.00000934532\n",
     "    disk_min_a = a_planet\n",
-    "    disk_max_a = a_planet + 2\n",
+    "    disk_max_a = a_planet + 3\n",
     "    while sim.N < (N_pl + sim.N_active):\n",
     "        a = rand_powerlaw(disk_min_a, disk_max_a,0)\n",
-    "        e = rand_rayleigh(0.01)\n",
-    "        inc = rand_rayleigh(0.05)\n",
+    "        e = rand_rayleigh(0.005)\n",
+    "        inc = rand_rayleigh(0.005)\n",
     "        Omega = rand_uniform(0,2*np.pi)\n",
     "        omega = rand_uniform(0,2*np.pi)\n",
     "        f = rand_uniform(0,2*np.pi)\n",
@@ -271,13 +274,14 @@
    "outputs": [],
    "source": [
     "#Setup parameters\n",
-    "dt = 0.01\n",
-    "HSR = 3\n",
+    "#dt = 0.01\n",
+    "dt = 0.17\n",
+    "HSB = 3\n",
     "n_runs = 6\n",
     "output_eia_snapshots = 1 #outputs 5 evenly spaced e,i,a snapshots for all orbiting bodies\n",
     "\n",
     "ones = np.ones(n_runs)\n",
-    "params = zip(ones*HSR,ones*dt,np.random.randint(0,1000,n_runs),range(n_runs),ones*output_eia_snapshots)"
+    "params = zip(ones*HSB,ones*dt,np.random.randint(0,1000,n_runs),range(n_runs),ones*output_eia_snapshots)"
    ]
   },
   {
@@ -383,7 +387,7 @@
     "import pandas as pd\n",
     "import glob\n",
     "%matplotlib inline\n",
-    "filenames = get_filename(HSR,dt,0)\n",
+    "filenames = get_filename(HSB,dt,0)\n",
     "files = glob.glob(filenames.split(\"0.txt\")[0]+\"*.txt\")\n",
     "\n",
     "fn = len(files)\n",
@@ -469,7 +473,7 @@
    "source": [
     "run = 0    #which run do you want to display eia outputs?\n",
     "\n",
-    "eia_name = get_filename(HSR,dt,run)\n",
+    "eia_name = get_filename(HSB,dt,run)\n",
     "files = glob.glob(filenames.split(\".txt\")[0]+\"_eia*.txt\")\n",
     "N_eia = len(files)\n",
     "if N_eia == 1:\n",
