--- a/ipython_examples/SimulationArchive.ipynb
+++ b/ipython_examples/SimulationArchive.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Simulation Archive\n",
-    "A Simulation Archive (Rein & Liu 2017) is useful when one runs long simulations. With the Simulation Archive, one can easily restart the simulation and analyize it. The Simulation Archive works with `WHFast`, `WHFastHelio` and `IAS15`. There are some restrictions that apply, for example, the number of paricles has to be constant throughout the integration."
+    "A Simulation Archive (Rein & Tamayo 2017) is useful when one runs long simulations. With the Simulation Archive, one can easily restart the simulation and analyize it. The Simulation Archive works with `WHFast`, `WHFastHelio` and `IAS15`. There are some restrictions that apply, for example, the number of paricles has to be constant throughout the integration."
    ]
   },
   {
