--- a/janus.ipynb
+++ b/janus.ipynb
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jan 30 2017 14:55:20\n"
+      "Jan 30 2017 15:06:33\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
     "    sim.save(\"janus_init.bin\")\n",
     "sim = rebound.Simulation.from_file(\"janus_init.bin\")\n",
     "sim.move_to_com()\n",
-    "sim.integrator = \"leapfrog\"\n",
+    "sim.integrator = \"janus\"\n",
     "sim.ri_janus.scale = 1e20\n",
     "sim.dt = 0.8/365.25*2.*np.pi\n",
     "#sim.getWidget()"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -58,8 +58,8 @@
      "output_type": "stream",
      "text": [
       "0.09185065340468768\n",
-      "0.008705838097556587\n",
-      "0.09185065340619755\n"
+      "0.00870583809184614\n",
+      "0.09185065340468768\n"
      ]
     }
    ],
